--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,10 @@ body {
 
 h1 {
   text-align: center;
-  font-family: sans-serif;
+  font-family: "Playfair Display", "Garamond", serif;
   font-size: 36px;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
 
 h2 {
